# image_explorer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Pipfile  README.md  pyproject.toml  setup.py
general_utils/: loggers.py  utils.py
image_explorer/: caller.py  window.py
image_inspector/: __init__.py  child_window.py  inspector.py  show.py  window.py
python/imspect/: __init__.py
src/: input.rs  lib.rs  main.rs
src/imspect_app/: app.rs  imspection.rs  mod.rs  run.rs  textures.rs
utils/: utils.py
