[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pre-commit>=3.3.3",
    "black>=23.7.0",
    "pyupgrade>=3.10.1",
    "pytest>=7.4.0",
]

[project]
name = "image_inspector"
version = "0.1.0"
description = ""
authors = [
    {name = "SEBROVATER", email = "sebrovskiy.k@gmail.com"},
]
dependencies = [
    "dearpygui>=1.9.1",
    "opencv-python>=4.8.0.76",
    "numpy>=1.25.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
